# synapse

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
apps/backend/: Dockerfile  alembic.ini  astrocyte.yaml  centrifugo.yaml  mip.yaml  pyproject.toml
apps/backend/ee/: LICENSE  __init__.py
apps/backend/ee/license/: __init__.py  feature_flags.py  license_fns.py  license_service.py  license_types.py
apps/backend/synapse/: __init__.py  audit.py  config.py  ee_hooks.py  main.py  openapi_contract.py
apps/backend/synapse/analytics/: clustering.py  metrics.py
apps/backend/synapse/auth/: jwt.py  local.py
apps/backend/synapse/chat/: __init__.py  agent.py  api_models.py  lineage.py  mcp.py  sessions.py  tools.py
apps/backend/synapse/contracts/: __init__.py  migration-bundle-v1.schema.json  synapse-v1.openapi.json
apps/backend/synapse/council/: conflict.py  convergence.py  models.py  orchestrator.py  session.py  thread.py
apps/backend/synapse/db/: models.py  session.py
apps/backend/synapse/dsar/: __init__.py  certificate.py  state_machine.py  worker.py
apps/backend/synapse/llm/: client.py
apps/backend/synapse/mcp/: server.py
apps/backend/synapse/memory/: banks.py  context.py  gateway_client.py  models.py
apps/backend/synapse/notifications/: apns.py  dispatcher.py  fcm.py  ntfy.py  smtp.py
apps/backend/synapse/realtime/: centrifugo.py  tokens.py
apps/backend/synapse/routers/: analytics.py  api_keys.py  audit_logs.py  auth.py  centrifugo_router.py  chat.py  (+11 more)
apps/backend/tests/: conftest.py  test_webhook_delivery.py
(+258 files in other folders)
