[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-backend"
version = "0.1.0"
description = "Synapse multi-agent deliberation backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # HTTP client
    "httpx>=0.27",
    # Config
    "pydantic-settings>=2.0",
    # Auth — JWT (RS256 OIDC + HS256 dev mode)
    "pyjwt[crypto]>=2.8",
    # LLM
    "litellm>=1.52",
    # SSE streaming
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",      # AsyncClient for FastAPI tests
    "respx>=0.21",      # httpx mock for Astrocyte gateway calls
]

[tool.hatch.build.targets.wheel]
packages = ["synapse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
# No local path deps yet — Astrocyte is called via HTTP gateway only
